Change focus click to be on root game app instead of Enter key.  Also update gitignore with more files to ignore.